--- a/css/groupIntro.css
+++ b/css/groupIntro.css
@@ -120,90 +120,8 @@
     background: #44bcbc;
 }
 
-#arrow_r,
-#arrow_l {
-    cursor: pointer;
-    position: absolute;
-    display: inline-block;
-    z-index: 2;
-    text-align: center;
-    top: 200px;
-    width: 50px;
-    height: 50px;
-}
 
-#arrow_r:after,
-#arrow_l:after,
-#arrow_r:before,
-#arrow_l:before {
-    position: absolute;
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    left: 0px;
-}
 
-#arrow_r:before,
-#arrow_l:before {
-    content: url("../images/page1/bg-white.png");
-}
-
-#arrow_r:after {
-    top: 12px;
-    content: url("../images/page1/nex-black.png");
-}
-
-#arrow_l:after {
-    top: 12px;
-    content: url("../images/page1/pre-black.png");
-}
-
-#arrow_r:hover#arrow_r:after {
-    content: url("../images/page1/nex-white.png");
-}
-
-#arrow_l:hover#arrow_l:after {
-    content: url("../images/page1/pre-white.png");
-}
-
-#arrow_r:hover#arrow_r:before,
-#arrow_l:hover#arrow_l:before {
-    content: url("../images/page1/bg-blue.png");
-}
-
-#arrow_l:hover#arrow_l:before {
-    content: url("../images/page1/bg-blue.png");
-    -webkit-animation: comeLeft .3s ease-out forwards;
-}
-
-#arrow_r:hover#arrow_r:before {
-    content: url("../images/page1/bg-blue.png");
-    -webkit-animation: comeRight .3s ease-out forwards;
-}
-
-@-webkit-keyframes comeRight {
-    from {
-        opacity: 0;
-        -webkit-transform: translate(100px, 0);
-    }
-}
-
-@-webkit-keyframes comeLeft {
-    from {
-        opacity: 0;
-        -webkit-transform: translate(-100px, 0);
-    }
-}
-
-#arrow_l {
-    float: left;
-    left: -50px
-}
-
-#arrow_r {
-    float: right;
-    right: -50px
-}
 
 
 
@@ -248,12 +166,12 @@
     margin-top: -30px;
 }
 
-.lineList li.action {
+.lineList li.active {
     font-size: 20px;
     color: #44bcbc;
 }
 
-.lineList li.action:before {
+.lineList li.active:before {
     display: inline-block;
     content: " ";
     height: 10px;
@@ -264,7 +182,7 @@
     background: url("../images/page1/top-angle.png");
 }
 
-.lineList li.action:after {
+.lineList li.active:after {
     width: 205px;
     font-size: 12px;
     color: #000;
@@ -275,39 +193,39 @@
 
 
 
-.lineList li:nth-child(2).action:after {
+.lineList li:nth-child(2).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(3).action:after {
+.lineList li:nth-child(3).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(4).action:after {
+.lineList li:nth-child(4).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(5).action:after {
+.lineList li:nth-child(5).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(6).action:after {
+.lineList li:nth-child(6).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(7).action:after {
+.lineList li:nth-child(7).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(8).action:after {
+.lineList li:nth-child(8).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(9).action:after {
+.lineList li:nth-child(9).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(10).action:after {
+.lineList li:nth-child(10).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
