--- a/css/base.css
+++ b/css/base.css
@@ -398,6 +398,16 @@ a:hover {
     align-items: baseline;
 }
 
+.Liz-navbar {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 0 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index: 999;
+}
+
 .Liz-header-nav {
     text-align: center;
     cursor: pointer;
@@ -410,9 +420,9 @@ a:hover {
     width: 100%;
     height: 100%;
     display: inline-block;
-    color: rgba(0, 0, 0, .6);
+    color: rgb(116, 116, 116);
     text-decoration: none;
-    padding: 23px 0;
+    padding: 16px 0;
 }
 
 .Liz-header-nav>li.active {
