--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,9 @@
+.header {
+    height: 600px;
+    background-image:url('../images/page7/bg-header.png');
+}
+
+
 #carousel-wrap .item{
   background: #fff;
 }
@@ -65,10 +71,9 @@
     border: 1px dashed #999;
 }
 
-#section3 {
-    border-bottom: 1px solid #C0C0C0;
+#section4 {
     padding: 30px 0 50px;
 }
-#section3 img {
+#section4 img {
     max-height: 190px;
 }
