--- a/css/base.css
+++ b/css/base.css
@@ -95,6 +95,18 @@ a:hover {
     background: rgba(255, 255, 255, 0);
 }
 
+.go-header {
+    position: relative;
+    cursor: pointer;
+    transition: all 0.2s ease-in;
+    -webkit-transition: all 0.2s ease-in;
+    top: 0;
+}
+
+.go-header:hover {
+    top: -5px;
+}
+
 .navicon {
     position: relative;
     height: 26px;
@@ -524,21 +536,6 @@ a:hover {
 .anim-fadeIn {
     -webkit-animation: fadeIn 0.3s ease both;
 }
-/*.bgHeader{
-    position: relative;
-    background-size: contain;
-}
-.bgHeader .screen{  
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%); 
-}
-.bgHeader .bgBox{
-    position: relative;
-    width: 100%;
-}*/
-
 
 /**
  * footer
