--- a/css/webstore.css
+++ b/css/webstore.css
@@ -45,25 +45,25 @@
 .logo5-box {
     position: relative;
     border: 1px solid #ffffff;
+    -webkit-animation: fadeIn 0.3s ease both;
 }
 
-.logo1-box:after,
-.logo2-box:after,
-.logo3-box:after,
-.logo4-box:after,
-.logo5-box:after{
+.log1:after,
+.log2:after,
+.log3:after,
+.log4:after,
+.log5:after{
     display: table;
     position: absolute;
     bottom: -5px;
     z-index: 99;
     cursor: pointer;
-    -webkit-animation: fadeIn 0.3s ease both;
 }
-.logo1-box:before,
-.logo2-box:before,
-.logo3-box:before,
-.logo4-box:before,
-.logo5-box:before{
+.log1:before,
+.log2:before,
+.log3:before,
+.log4:before,
+.log5:before{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -84,23 +84,23 @@
     height: 100%;
 }
 
-.logo1-box:after {
+.log1:after {
     content: url("../images/page6/logo1.png");
 }
 
-.logo2-box:after {
+.log2:after {
     content: url("../images/page6/logo2.png");
 }
 
-.logo3-box:after {
+.log3:after {
     content: url("../images/page6/logo3.png");
 }
 
-.logo4-box:after {
+.log4:after {
     content: url("../images/page6/logo4.png");
 }
 
-.logo5-box:after {
+.log5:after {
     content: url("../images/page6/logo5.png");
 }
 
@@ -113,45 +113,45 @@
     display: block;
 }
 
-.logo1-box:hover.logo1-box:before {
+.log1:hover.log1:before {
     content: url("../images/page6/log1.png");
 }
 
-.logo2-box:hover.logo2-box:before {
+.log2:hover.log2:before {
     content: url("../images/page6/log5.png");
 }
 
-.logo3-box:hover.logo3-box:before {
+.log3:hover.log3:before {
     content: url("../images/page6/log3.png");
 }
 
-.logo4-box:hover.logo4-box:before {
+.log4:hover.log4:before {
     content: url("../images/page6/log2.png");
 }
 
-.logo5-box:hover.logo5-box:before {
+.log5:hover.log5:before {
     content: url("../images/page6/log4.png");
 }
 
 
 
 
-.logo1-box:hover.logo1-box:after {
+.log1:hover.log1:after {
     content: url("../images/page6/logo1.png");
 }
 
-.logo2-box:hover.logo2-box:after {
+.log2:hover.log2:after {
     content: url("../images/page6/logo1.png");
 }
 
-.logo3-box:hover.logo3-box:after {
+.log3:hover.log3:after {
     content: url("../images/page6/logo1.png");
 }
 
-.logo4-box:hover.logo4-box:after {
+.log4:hover.log4:after {
     content: url("../images/page6/logo1.png");
 }
 
-.logo5-box:hover.logo5-box:after {
+.log5:hover.log5:after {
     content: url("../images/page6/logo1.png");
 }
