update groupIntro animation of slide up

--- a/css/groupIntro.css
+++ b/css/groupIntro.css
@@ -1,3 +1,7 @@
+.header {
+    height: 67px;
+}
+
 
 /**
  * chairmen
@@ -185,15 +189,3 @@
     background: #44bcbc;
     border-radius: 4px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
