--- a/css/base.css
+++ b/css/base.css
@@ -546,76 +546,65 @@ a:hover {
 }
 
 
-/**
- * #arrow_r,#arrow_l
- */
-#arrow_r,
-#arrow_l {
+[class|="navigation"] {
+    position: absolute;
+    width: 38px;
+    height: 50px;
     cursor: pointer;
-    position: absolute;
-    display: inline-block;
-    z-index: 2;
-    text-align: center;
     overflow: hidden;
-    top: 130px;
-    width: 50px;
-    height: 50px;
 }
 
-#arrow_l {
-    float: left;
-    left: -70px
+[class|="navigation"] span {
+    display: block;
+    height: 100%;
+    position: relative;
+    width: 100%;
+    left: 0%;
+    transition: left 0.35s;
+    line-height: 100%;
+    background-repeat: no-repeat;
+    background-position: 11px;
 }
 
-#arrow_r {
-    float: right;
-    right: -70px
-}
-#arrow_r:after,
-#arrow_l:after,
-#arrow_r:before,
-#arrow_l:before {
-    position: absolute;
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    left: 0px;
+[class|="navigation"] span:first-child {
+    background-color: rgb(255, 255, 255);
 }
 
-#arrow_r:before,
-#arrow_l:before {
-    content:"";
-    background:#ffffff;
+[class|="navigation"]  span:nth-child(2) {
+    background-color: rgb(68, 188, 187);
 }
 
-#arrow_r:after {
-    top: 12px;
-    content: url("../images/page1/nex-black.png");
+.navigation-prev:hover span {
+    left: -100%;
 }
 
-#arrow_l:after {
-    top: 12px;
-    content: url("../images/page1/pre-black.png");
-}
-#arrow_r:hover#arrow_r:after {
-    content: url("../images/page1/nex-white.png");
+.navigation-prev {
+    left: -70px;
+    top: 136px;
 }
 
-#arrow_l:hover#arrow_l:after {
-    content: url("../images/page1/pre-white.png");
+.navigation-next:hover span {
+    left: 100%;
 }
 
-#arrow_r:hover#arrow_r:before,
-#arrow_l:hover#arrow_l:before {
-    content:"";
-    background:#44bcbc;
+.navigation-next {
+    right: -70px;
+    top: 136px;
 }
 
-#arrow_l:hover#arrow_l:before {
-
-    -webkit-animation: comeLeft .3s ease-out forwards;
+.navigation-prev span:first-child {
+    background-image:url('../images/page7/pre-black.png');
+}
+.navigation-prev span:nth-child(2) {
+    transform: translate(40px, -50px);
+    background-image:url('../images/page7/pre-white.png');
 }
 
-#arrow_r:hover#arrow_r:before {
-    -webkit-animation: comeRight .3s ease-out forwards;
+.navigation-next  span:first-child {
+    background-image:url('../images/page7/nex-black.png');
+}
+
+.navigation-next span:nth-child(2) {
+    transform: translate(-40px, -50px);
+    background-image:url('../images/page7/nex-white.png');
 }
