--- a/css/groupIntro.css
+++ b/css/groupIntro.css
@@ -66,16 +66,20 @@
  * development history
  */
 
-.Liz-line {
+.time-axis {
     margin-top: 15%;
     margin-bottom: 5%;
+    background-image: url('../images/page1/line.png');
+    background-repeat: repeat-x;
+    height: 10px;
+    transition: all 0.4s ease-out;
 }
 
-.lineList {
+.time-years {
     font-size: 0;
 }
 
-.lineList li {
+.time-years li {
     display: inline-block;
     text-align: center;
     font-size: 16px;
@@ -83,66 +87,69 @@
     margin-top: -30px;
 }
 
-.lineList li.active {
+.time-years li.active {
     font-size: 20px;
     color: #44bcbc;
 }
 
-.lineList li.active:before {
-    display: inline-block;
-    content: " ";
+.time-arrow {
     height: 10px;
     width: 15px;
     position: absolute;
-    top: -80px;
+    top: -13px;
     margin-left: 7px;
-    background: url("../images/page1/top-angle.png");
+    background: url("../images/page1/top-angle.png") no-repeat;
+    transition: all 0.4s ease-out;
+    margin-left: 45px;
+    left: 480px;
 }
 
-.lineList li.active:after {
+.time-years li.active:after {
     width: 205px;
-    font-size: 12px;
-    color: #000;
+    line-height: 24px;
+    font-size: 20px;
+    color: #888;
     position: absolute;
     top: -170px;
     display: inline-block;
+    animation: fadeIn 0.4s both;
 }
 
 
 
-.lineList li:nth-child(2).active:after {
+.time-years li:nth-child(2).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(3).active:after {
+.time-years li:nth-child(3).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(4).active:after {
+.time-years li:nth-child(4).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(5).active:after {
+.time-years li:nth-child(5).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(6).active:after {
+.time-years li:nth-child(6).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(7).active:after {
+.time-years li:nth-child(7).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(8).active:after {
+.time-years li:nth-child(8).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(9).active:after {
+.time-years li:nth-child(9).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
-.lineList li:nth-child(10).active:after {
+.time-years li:nth-child(10).active:after {
     margin-left: -123px;
     content: "2008:卓尚服饰全年销售增加265%";
 }
@@ -153,8 +160,7 @@
  * group culture
  */
 
-.groupcultureText {
-    height: 614px;
+.time-year {
     margin-left: -53px;
     padding-left: 71px;
     overflow: auto;
