--- a/css/learn.css
+++ b/css/learn.css
@@ -3,3 +3,8 @@
     background-size: cover;
     background-position: 50% 50%;
 }
+
+.header {
+    height: 270px;
+    background-image:url('../images/page8/bg-header.png');
+}
