--- a/css/news.css
+++ b/css/news.css
@@ -1,3 +1,8 @@
+.header {
+    height: 270px;
+    background-image:url('../images/page8/bg-header.png');
+}
+
 .newList-item {
     padding: 30px 0;
     border-bottom: #ebebeb 1px dotted;
