--- a/css/sub-brand.css
+++ b/css/sub-brand.css
@@ -1,3 +1,7 @@
+.header {
+    height: 270px;
+    background-image:url('../images/page4/bg-header.png');
+}
 .logo1-box {
     background-size: cover;
     background: url("../images/page3/logo1-img.png");
