--- a/css/webstore.css
+++ b/css/webstore.css
@@ -1,3 +1,9 @@
+.header {
+    height: 270px;
+    background-image: url('../images/page4/bg-header.png');
+}
+
+
 .logo1-box {
     background-size: cover;
     background: url("../images/page6/logo1-img.png");
@@ -67,7 +73,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateY(-50%) translateX(-50%); 
+    transform: translateY(-50%) translateX(-50%);
     z-index: 99;
 }
 .log1,
