--- a/css/base.css
+++ b/css/base.css
@@ -79,6 +79,7 @@ a:hover {
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center top;
 }
 
 .header .overlayer {
