--- a/css/animation.css
+++ b/css/animation.css
@@ -50,14 +50,14 @@
 @-webkit-keyframes toRight {
     from {
         opacity: 0;
-        -webkit-transform: translateX(1000px);
+        background-position-x: -1000px;
     }
 }
 
 @-webkit-keyframes toLeft {
     from {
         opacity: 0;
-        -webkit-transform: translateX(-1000px);
+        background-position-x: 1000px;
     }
 }
 /**
@@ -65,7 +65,7 @@
  */
 
 @-webkit-keyframes toTop {
-  from {  
+  from {
     -webkit-transform:translate3D(0,220px,0);
     opacity: 0;
   }
@@ -76,12 +76,12 @@
 }
 @-webkit-keyframes log-toLeftBotton{
   0%{
-    -webkit-transform:translate3D(0,0,0);
-    opacity:0;
+      -webkit-transform:translate3D(50px,-50px,0);
+      opacity: 0;
   }
-  50% {  
-    -webkit-transform:translate3D(40px,-40px,0);
-    opacity: 0.6;
+  10%{
+      -webkit-transform:translate3D(50px,-50px,0);
+      opacity: 0.6;
   }
   100%{
     -webkit-transform:translate3D(0,0,0);
@@ -90,12 +90,12 @@
 }
 @-webkit-keyframes log-toLeftTop{
   0%{
-    -webkit-transform:translate3D(0,0,0);
-    opacity:0;
+      -webkit-transform:translate3D(50px,50px,0);
+      opacity: 0;
   }
-  50% {  
-    -webkit-transform:translate3D(40px,40px,0);
-    opacity: 0.6;
+  10%{
+      -webkit-transform:translate3D(50px,50px,0);
+      opacity: 0.6;
   }
   100%{
     -webkit-transform:translate3D(0,0,0);
@@ -104,12 +104,12 @@
 }
 @-webkit-keyframes log-toRightBotton{
   0%{
-    -webkit-transform:translate3D(0,0,0);
-    opacity:0;
+      -webkit-transform:translate3D(-50px,-50px,0);
+      opacity:0;
   }
-  50% {  
-    -webkit-transform:translate3D(-40px,-40px,0);
-    opacity:0.6;
+  10%{
+      -webkit-transform:translate3D(-50px,-50px,0);
+      opacity:0.6;
   }
   100%{
     -webkit-transform:translate3D(0,0,0);
@@ -118,12 +118,12 @@
 }
 @-webkit-keyframes log-toRight {
   0%{
-    -webkit-transform:translate3D(0,0,0);
-    opacity:0;
+      -webkit-transform:translate3D(-50px,-50px,0);
+      opacity: 0;
   }
-  50% {  
-    -webkit-transform:translate3D(-40px,0,0);
-    opacity: 0.6;
+  10%{
+      -webkit-transform:translate3D(-50px,-50px,0);
+      opacity:0.6;
   }
   100%{
     -webkit-transform:translate3D(0,0,0);
@@ -132,12 +132,12 @@
 }
 @-webkit-keyframes log-toBotton{
   0%{
-    -webkit-transform:translate3D(0,0,0);
-    opacity:0;
+      -webkit-transform:translate3D(-50px,-50px,0);
+      opacity: 0;
   }
-  50% {  
-    -webkit-transform:translate3D(0,-40px,0);
-    opacity: 0.6;
+  10%{
+      -webkit-transform:translate3D(-50px,-50px,0);
+      opacity:0.6;
   }
   100%{
     -webkit-transform:translate3D(0,0,0);
@@ -146,12 +146,12 @@
 }
 @-webkit-keyframes log-toTop {
   0%{
-    -webkit-transform:translate3D(0,0,0);
-    opacity:0;
+      -webkit-transform:translate3D(-50px,-50px,0);
+      opacity: 0;
   }
-  50% {  
-    -webkit-transform:translate3D(0,40px,0);
-    opacity: 0.6;
+  10%{
+      -webkit-transform:translate3D(-50px,-50px,0);
+      opacity:0.6;
   }
   100%{
     -webkit-transform:translate3D(0,0,0);
