--- a/css/main.css
+++ b/css/main.css
@@ -9,45 +9,58 @@ body {
 .Liz-img {
     width: 100%;
     height: 33.33333%;
+    background-repeat: repeat-x;
+    background-size: cover;
+    background-position-x: 0%;
 }
 
 .Liz-screen {
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(225, 225, 225, .8);
+    background: rgba(225, 225, 225, .9);
 }
 
 .Liz-img1 {
-    -webkit-animation: toRight 2.3s ease forwards;
+    background-image: url('../images/page2/bg-1.png');
+    -webkit-animation: toRight 2.3s ease both;
 }
 .Liz-img2 {
-    -webkit-animation: toLeft 2.3s ease forwards;
+    background-image: url('../images/page2/bg-3.png');
+    -webkit-animation: toLeft 2.3s ease both;
+}
+.Liz-img3 {
+    background-image: url('../images/page2/bg-3.png');
+    -webkit-animation: toRight 2.3s ease forwards;
 }
 
 .logAnim-toRightBotton{
-	-webkit-animation: log-toRightBotton 1.3s ease 2.3s both;
+	-webkit-animation: log-toRightBotton 1.3s ease 2s both;
 }
 .logAnim-toRight{
-	-webkit-animation: log-toRight 1.3s ease 2.3s both;
+	-webkit-animation: log-toRight 1.3s ease 2s both;
 }
 .logAnim-toBotton{
-	-webkit-animation: log-toBotton 1.3s ease 2.3s both;
+	-webkit-animation: log-toBotton 1.3s ease 2s both;
 }
 .logAnim-toTop{
-	-webkit-animation: log-toTop 1.3s ease 2.3s both;
+	-webkit-animation: log-toTop 1.3s ease 2s both;
 }
 .logAnim-toLeftBotton{
-	-webkit-animation: log-toLeftBotton 1.3s ease 2.3s both;
+	-webkit-animation: log-toLeftBotton 1.3s ease 2s both;
 }
 .logAnim-toLeftTop{
-	-webkit-animation: log-toLeftTop 1.3s ease 2.3s both;
+	-webkit-animation: log-toLeftTop 1.3s ease 2s both;
 }
 
 
 .logList{
-	margin-top: 50px;
-	-webkit-animation: toTop 1.3s ease 3.8s both;
+    position: absolute;
+    bottom: 240px;
+	left: 50%;
+    margin-left: -167px;
+	-webkit-animation: toTop 1.3s ease 3s both;
+    width: 334px;
 }
 .logImg{
 	-webkit-animation: fadeIn 1s ease both;
@@ -57,5 +70,3 @@ body {
 	cursor: pointer;
 	flex: 1;
 }
-
-
