--- a/css/development.css
+++ b/css/development.css
@@ -16,15 +16,36 @@
     background: #C0C0C0;
 }
 
-.Liz-devel-nav>li.active {
+.Liz-devel-nav>li.active{
     background: #44bcbc;
     color: #FFFFFF;
 }
 
+
+.panel-heading:hover{
+    background: #44bcbc!important;
+
+}
+.panel-heading:hover .panel-a>pre{
+    color: #FFFFFF;
+    text-transform:capitalize;
+    -webkit-animation: comeRight 0.3s ease both;
+}
 .panel-title>a {
     list-style-type: none;
     text-decoration: none;
+    text-transform:uppercase;
 }
+
 .panel-body {
     padding: 50px 0!important;
+}
+.panel-a>pre{
+    font-size: 16px;
+    -webkit-animation: comeLeft 0.3s ease both;
+}
+
+
+.employTitleUp{
+    text-transform:uppercase;    /*英文字母全部大写*/
 }
