--- a/css/groupIntro.css
+++ b/css/groupIntro.css
@@ -19,10 +19,11 @@
 
 #slider {
     width: 1200px;
-    height: 330px;
+    height: 390px;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+    font-size: 16px;
     -webkit-user-select: none;
 }
 
@@ -40,7 +41,7 @@
     position: absolute;
     display: inline-block;
     float: left;
-    top: 310px;
+    top: 360px;
     left: 567px;
     font-size: 60px;
     z-index: 2;
@@ -166,7 +167,10 @@
     padding-left: 71px;
     overflow: auto;
 }
-
+.Liz-scroll{
+    margin-right: 20px;
+    padding-right: 20px;
+}
 
 /* 滚动条整体部分width,height,background,border */
 
