--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .header {
     height: 600px;
-    background-image:url('../images/page7/bg-header.png');
+    background-image:url('../images/page7/bg-header1.png');
 }
 
 
