--- a/css/groupIntro.css
+++ b/css/groupIntro.css
@@ -25,6 +25,9 @@
     overflow: hidden;
     font-size: 16px;
     -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 
 #slider ul {
@@ -68,6 +71,10 @@
  * development history
  */
 
+#time-axis {
+    overflow: hidden;
+}
+
 .time-axis {
     margin-top: 15%;
     margin-bottom: 5%;
@@ -79,6 +86,8 @@
 
 .time-years {
     font-size: 0;
+    transition: all 0.4s ease-out;
+    left: 0;
 }
 
 .time-years li {
@@ -98,64 +107,24 @@
     height: 10px;
     width: 15px;
     position: absolute;
-    top: -13px;
+    top: 168px;
     margin-left: 7px;
     background: url("../images/page1/top-angle.png") no-repeat;
     transition: all 0.4s ease-out;
     margin-left: 45px;
-    left: 480px;
+    left: 0;
 }
 
-.time-years li.active:after {
+.time-label{
     width: 205px;
     line-height: 24px;
     font-size: 20px;
     color: #888;
     position: absolute;
-    top: -170px;
-    display: inline-block;
-    animation: fadeIn 0.4s both;
+    top: 56px;
+    left: 0;
+    transition: all 0.4s ease-out;
 }
-
-
-
-.time-years li:nth-child(2).active:after {
-    margin-left: -123px;
-    content: "2008:卓尚服饰全年销售增加265%";
-}
-.time-years li:nth-child(3).active:after {
-    margin-left: -123px;
-    content: "2008:卓尚服饰全年销售增加265%";
-}
-.time-years li:nth-child(4).active:after {
-    margin-left: -123px;
-    content: "2008:卓尚服饰全年销售增加265%";
-}
-.time-years li:nth-child(5).active:after {
-    margin-left: -123px;
-    content: "2008:卓尚服饰全年销售增加265%";
-}
-.time-years li:nth-child(6).active:after {
-    margin-left: -123px;
-    content: "2008:卓尚服饰全年销售增加265%";
-}
-.time-years li:nth-child(7).active:after {
-    margin-left: -123px;
-    content: "2008:卓尚服饰全年销售增加265%";
-}
-.time-years li:nth-child(8).active:after {
-    margin-left: -123px;
-    content: "2008:卓尚服饰全年销售增加265%";
-}
-.time-years li:nth-child(9).active:after {
-    margin-left: -123px;
-    content: "2008:卓尚服饰全年销售增加265%";
-}
-.time-years li:nth-child(10).active:after {
-    margin-left: -123px;
-    content: "2008:卓尚服饰全年销售增加265%";
-}
-
 
 
 /**
