--- a/css/news.css
+++ b/css/news.css
@@ -8,6 +8,7 @@
     border-bottom: #ebebeb 1px dotted;
     background-color: white;
     position: relative;
+    opacity: 0;
 }
 
 .newList-item:hover {
