--- a/src/css/base.css
+++ b/src/css/base.css
@@ -48,15 +48,17 @@ a, a:visited, a:focus, a:hover {
 }
 .header {
     position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center top;
+    .page {
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 }
 .header:after {
     content: url('../images/page1/logo0.png');
     position: absolute;
     left: 20px;
-    top: 17px;
+    top: 20px;
 }
 .header .overlayer {
     position: absolute;
@@ -75,16 +77,17 @@ a, a:visited, a:focus, a:hover {
     position: relative;
     cursor: pointer;
     transition: all 0.2s ease-in;
-    top: 0;
+    top: 2px;
 }
 .go-header:hover {
     top: -5px;
 }
 .navicon {
-    position: relative;
+    position: fixed;
     height: 26px;
     top: 20px;
     z-index: 2;
+    width: 100%;
 }
 .nav-toggle {
     cursor: pointer;
