--- a/src/css/subbrand.css
+++ b/src/css/subbrand.css
@@ -2,34 +2,62 @@
     height: 72px;
     background: rgba(192, 192, 192, .2);
 }
-.brandBg{
-	height: 519px;
-	background-image: url('../images/page3/bg.png');
+
+.brandBg {
+    height: 519px;
+    background-image: url('../images/page3/bg.png');
 }
-.brandListBg{
-	background:rgba(225,225,225,.5);
+
+.brandListBg {
+    background: rgba(225, 225, 225, .5);
 }
-.section{
-	width:100%;
+
+.section {
+    width: 100%;
 }
-.verticalCenter{ 
+
+.verticalCenter {
     position: relative;
-	.Center{  
-		    position: absolute;
-		    top: 50%;
-		    left: 50%;
-		    transform: translateY(-50%) translateX(-50%); 
+    .Center {
+        position: absolute;
+        z-index: 99;
+        top: 50%;
+        left: 50%;
+        transform: translateY(-80%) translateX(-50%);
+    }
+}
+
+.brandImgList {
+    .brandImgBox{
+    	position: relative;
+        display: inline-block;
+        opacity: 0;
+        transition: all 0.8s ease;
+        .brandPic {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    :hover {
+        opacity: 1;
+    }
+}
+.icoList{
+	width: 100%;
+	position: absolute;
+	bottom: 30px;
+	display: flex;
+	li{
+		flex:1;
+		margin:0 10px;
 	}
 }
-.brandImgList li{
-	display: inline-block;
-	img{
-		width: 100%;
-		height:100%;
-		opacity: 0;
-		translation:all 0.5s ease;
-	}
-	:hover{
-		opacity: 1;
-	}
+.weixinIco2{
+	width: 140px;
+	height: 147px;
+	position: absolute;
+	bottom: 60px;
+	left: 50%;
+	transform:translateX(-50%);
+	background-image:url('../images/page3/erweima.png'); 
 }
