--- a/src/css/groupIntro.css
+++ b/src/css/groupIntro.css
@@ -68,11 +68,13 @@
     background-repeat: repeat-x;
     height: 10px;
     transition: all 0.4s ease-out;
+    background-position: 76px 0;
 }
 .time-years {
     font-size: 0;
     transition: all 0.4s ease-out;
     left: 0;
+    margin-left: 308px;
 }
 .time-years li {
     display: inline-block;
@@ -90,20 +92,20 @@
     width: 15px;
     position: absolute;
     top: 168px;
-    margin-left: 7px;
+    left: 50%;
     background: url("../images/page1/top-angle.png") no-repeat;
     transition: all 0.4s ease-out;
-    margin-left: 45px;
-    left: 0;
 }
+
 .time-label {
+    margin-left: -30px;
     width: 205px;
     line-height: 24px;
     font-size: 20px;
     color: #888;
     position: absolute;
     top: 56px;
-    left: 0;
+    left: 50%;
     transition: all 0.4s ease-out;
 }
 
@@ -112,8 +114,6 @@
  */
 
 .time-year {
-    margin-left: -53px;
-    padding-left: 71px;
     overflow: auto;
 }
 .Liz-scroll {
